# CringeBot

./: README.md
CringeBot/: README.md  bot.py  main.py  pyproject.toml
CringeBot/config/: colors.py  config.py  emoji.py
CringeBot/sex/: choice.py  urls.py
